--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@
     font-family: "Fira Sans", serif;
     font-optical-sizing: auto;
     font-style: normal;
-    font-variation-settings: "wdth" 100;
+    font-variation-settings: "width" 100;
   }
 
   
@@ -71,9 +71,7 @@ nav ul li{
 
 }
 /* main styles */
-main{
-    
-}
+
 /* vision section styles */
 .section-title{
     font-size: 40px;
@@ -92,7 +90,7 @@ main{
     gap: 40px;
 
 }
-.visions,.Recent_news{
+.visions,.Recent_news,.donate{
     margin: 0 35px 0 230px;
 }
 .vision{
@@ -145,5 +143,12 @@ main{
     font-weight: bold;
     color: #0E0E0E;
     opacity:80%;
+}
+.news-card-subtitle{
+    display: flex;
+    gap: 18px;
+}
+.donate{
+    text-align: center;
 }
 
